--- a/index.html
+++ b/index.html
@@ -3,18 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Namste Javascript</title>
+    <title>React JS</title>
     <link  rel="stylesheet" href="./index.css"/>
 </head>
 <body>
-    <div id="root">
-    <h1>Hello World</h1>
-    <script>
-        const headingElement = document.createElement("h1");
-        const headingContent = headingElement.innerHTML="Hello World";
-        const root = document.getElementById("root")
-        root.appendChild(headingElement)
+    <div id="root"> 
+     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+     <script src="./App.js">
     </script>
-    </div>
 </body>
 </html>
